# public/docs/ApiV1/swagger.json
@@ -22,6 +22,70 @@
         "application/json"
     ],
     "paths": {
+        "/countries": {
+            "get": {
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Get Countries List.",
+                "description": "Get Countries List",
+                "operationId": "listAction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "HTTP_OK"
+                    },
+                    "404": {
+                        "description": "HTTP_NOT_FOUND"
+                    },
+                    "500": {
+                        "description": "HTTP_INTERNAL_SERVER_ERROR"
+                    }
+                }
+            }
+        },
+        "/countries/{id}": {
+            "get": {
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "Get Country Record.",
+                "description": "Get Country Record",
+                "operationId": "recordAction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of country to return",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "HTTP_OK"
+                    },
+                    "404": {
+                        "description": "HTTP_NOT_FOUND"
+                    },
+                    "500": {
+                        "description": "HTTP_INTERNAL_SERVER_ERROR"
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
@@ -85,6 +149,9 @@
                     },
                     "401": {
                         "description": "HTTP_UNAUTHORIZED"
+                    },
+                    "404": {
+                        "description": "HTTP_NOT_FOUND"
                     },
                     "405": {
                         "description": "HTTP_METHOD_NOT_ALLOWED"
